[tool.poetry]
name = "hsapi"
version = "0.0.1"
description = "The API for the Hull Seals"
authors = ["David Sangrey <rixxan@hullseals.space>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/HullSeals/api"

[tool.poetry.dependencies]
python = "^3.9"
ariadne = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "line-too-long"

[tool.pytest.ini_options]
asyncio_mode = "auto"